--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,26 +8,24 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Linting...
-      run: |
-        isort --check --diff tradestation/ tests/
-        flake8 --count --show-source --statistics tradestation/ tests/
-        mypy -p tradestation
-    - name: Testing...
-      run: |
-        python -m pytest --cov=tradestation --cov-report=term-missing tests/ --cov-fail-under=95
-      env:
-        TS_API_KEY: ${{ secrets.TS_API_KEY }}
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.12
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - uses: yezz123/setup-uv@v4
+      - name: Lint with ruff
+      - run: |
+          uv run ruff check tradestation/
+          uv run ruff check tests/
+        env:
+          TS_API_KEY: ${{ secrets.TS_API_KEY }}
+      - name: Type check with mypy
+      - run: |
+          uv run mypy -p tradestation
+          uv run mypy -p tests
+      - name: Test with pytest
+      - run: |
+          uv run pytest --cov=tradestation --cov-report=term-missing tests/ --cov-fail-under=95
