--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup uv venv
         run: |
           uv sync
-          uv pip install .
+          uv pip install -e .
       - name: Lint with ruff
         run: |
           uv run ruff check tradestation/
